[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Nathaniel Chappelle nathaniel.chappelle@proton.me"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Binkersss/GRRS"
repository = "https://github.com/Binkersss/GRRS"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.11"

[dev-dependencies]
tempfile = "3.16.0"
assert_cmd = "2.0.14"
predicates = "3.1.3"
assert_fs = "1.1.1"